benchmark + init_uint_x changé en malloc_uint_x et init_uint_x (qui fait que réinitialisé une variable à 0

--- a/Version_2/My_GMP/Makefile
+++ b/Version_2/My_GMP/Makefile
@@ -1,10 +1,28 @@
 CFLAGS=-c -g -Wall
 
-all: compil
+run: compil
 	./my_gmp
 
-compil: my_gmp.o bits.o printf.o
-	gcc -Wall -o my_gmp my_gmp.o bits.o printf.o
+valgrind: compil
+	valgrind ./my_gmp
+
+gdb: compil
+	gdb my_gmp
+	
+benchmark: benchmark_compil
+	./benchmark
+
+benchmark_compil: benchmark.o my_gmp.o bits.o printf.o
+	gcc -Wall -o benchmark benchmark.o my_gmp.o bits.o printf.o
+	
+compil: main.o my_gmp.o bits.o printf.o
+	gcc -Wall -o my_gmp main.o my_gmp.o bits.o printf.o
+
+benchmark.o: benchmark.c
+	gcc $(CFLAGS) benchmark.c
+
+main.o: main.c my_gmp.h
+	gcc $(CFLAGS) main.c
 
 my_gmp.o: my_gmp.c my_gmp.h
 	gcc $(CFLAGS) my_gmp.c
